[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/scene_scripts/scn_ui_main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/fnt_title.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/themes/theme_hud_main.tres" type="Theme" id=3]

[node name="ScnUiMainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 672.0
margin_top = 342.0
margin_right = 1247.0
margin_bottom = 738.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 575.0
margin_bottom = 129.0
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
text = "Card Joust"

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 133.0
margin_right = 575.0
margin_bottom = 396.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 157.0
margin_right = 417.0
margin_bottom = 263.0

[node name="BtnNewGame" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_right = 260.0
margin_bottom = 85.0
theme = ExtResource( 3 )
text = "Start"

[node name="BtnSettings" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 260.0
margin_bottom = 174.0
theme = ExtResource( 3 )
text = "Settings"

[node name="BtnQuit" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 260.0
margin_bottom = 263.0
theme = ExtResource( 3 )
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/BtnNewGame" to="." method="_on_BtnNewGame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/BtnSettings" to="." method="_on_BtnSettings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer/VBoxContainer/BtnQuit" to="." method="_on_BtnQuit_pressed"]
